[package]
name = "liveshow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-br", "trace"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
cachemap2 = "0.2"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1.34", features = ["serde"] }
http = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # 最小化大小优化